fix alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,6 @@ a:hover {
 }
 
 .section {
-  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
   padding: 10% 0;
